[metadata]
name = 'displayarray'
version = '0.0.3'
description = 'Tool for displaying numpy arrays.'
author = 'SimLeek'
author_email = 'simulator.leek@gmail.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/simleek/displayarray'

[requires]
python_version = ['3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'

[scripts]
displayarray = "displayarray.__main__:main"
