[tool.poetry]
name = 'displayarray'
version = '1.1.1'
description = 'Tool for displaying numpy arrays.'
authors = ['SimLeek <simulator.leek@gmail.com>']
license = 'MIT'
readme = "README.rst"
repository = "https://github.com/simleek/displayarray"

[tool.poetry.dependencies]
python = "^3.6"
opencv_python = "^4*"
docopt = "0.6.2"
numpy = "1.16.1"
localpubsub = "0.0.4"
pyzmq = "18.1.0"

[tool.poetry.dev-dependencies]
pytest = "5.2.1"
typing = "3.7.4.1"
mock = "^3.0"
tox = "^3.14"
tox-gh-actions = "^0.3.0"
coverage = "^4.5"
sphinx = "^2.2"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
mypy = "^0.740.0"
pydocstyle = "^4.0"

[tool.poetry.scripts]
displayarray = "displayarray.__main__:main"

[build-system]
requires = ['poetry']
build-backend = "poetry.masonry.api"

